Fix alert background on dark mode

--- a/web/src/themes/dark.scss
+++ b/web/src/themes/dark.scss
@@ -17,6 +17,7 @@
   --color-1-5: rgba(15, 14, 17, 0.95);
   --color-1-10: rgba(15, 14, 17, 0.9);
   --color-1-20: rgba(15, 14, 17, 0.8);
+  --color-1-60: rgba(15, 14, 17, 0.4);
   --color-2-500: #0f0e11;
 
   --color-black-5: rgba(255, 255, 255, 0.05);
@@ -475,7 +476,7 @@
 
   .alert-primary {
     color: var(--color-font);
-    background-color: var(--color-1-10);
+    background-color: var(--color-1-60);
     border-color: var(--color-1-20);
   }
 
